<resources>
    <string name="app_name">Android/compute</string>
    <string name="app_name_short">A/compute</string>

    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_help">Help</string>

    <string name="label_0">0</string>
    <string name="label_domain_ip">Domain/IP</string>
    <string name="label_lambda_count">Lambda Count</string>
    <string name="label_pending_batches">Pending Batches</string>
    <string name="label_port">Port</string>
    <string name="label_processed_batches">Processed Batches</string>
    <string name="label_status">Status</string>

    <string name="text_connect_description">Before this device can be used as a compute node, a suitable master service has to be connected to. Please enter the domain name or IP address, and port number, of a trusted compute service and then proceed.</string>
    <string name="text_connected_to_ss">Connected to %1$s:%2$s.</string>
    <string name="text_connecting_to_ss">Connecting to %1$s:%2$s.</string>
    <string name="text_connection_closed_by_ss">Connection closed by %1$s:%2$s.</string>
    <string name="text_connection_lost_to_ss">Connection lost to %1$s:%2$s.</string>
    <string name="text_disconnected_from_ss">Disconnected from %1$s:%2$s.</string>
    <string name="text_error_address">No valid address provided.</string>
    <string name="text_error_failed_to_connect_to_ss">Failed to connect to %1$s:%2$s.</string>
    <string name="text_error_timed_out_connecting_to_ss">Timed out while connecting to %1$s:%2$s.</string>

    <string name="title_connect_to_master_service">Connect to Master Service</string>
</resources>
